...
        </Bubble>
      );
    }

    return (
      <Bubble testID="location-bubble">
        <Text testID="location-bubble-latitude">
          Latitude: {this.state.latitude}
        </Text>
        <Text testID="location-bubble-longitude">
          Longitude: {this.state.longitude}
        </Text>
        <Text>Screen Point X: {this.state.screenPointX}</Text>
...
  render() {
    return (
      <Page {...this.props}>
        <MapboxGL.MapView
          style={sheet.matchParent}
          onPress={this.onPress}
          testID={'show-click-map-view'}>
          <MapboxGL.Camera centerCoordinate={DEFAULT_CENTER_COORDINATE} />
        </MapboxGL.MapView>
        {this.renderLastClicked()}
      </Page>
    );
  }
...
